// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /client-view 1`] = `
{
  "lines": 309,
  "modals": 4,
  "sha256": "cc896486990883f1a589e6e4c3e637a9b12c7f5c29a187654e16cd19784a1f9d",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /client-view?portalId=44444444-4444-4444-8444-444444444444 1`] = `
{
  "lines": 533,
  "modals": 7,
  "sha256": "80a4427dd9cd6e30f82ff60c0041aa8de52f9f87f2c6adc00375114d966b0efd",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /managed-property 1`] = `
{
  "lines": 332,
  "modals": 4,
  "sha256": "48adfb608b672ff75bab16a0468faf32d211a368058194064cec1aaf9e3b67f6",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /oac-meeting 1`] = `
{
  "lines": 395,
  "modals": 5,
  "sha256": "15b93a940c2eee03e065757a8aa4db46b39cde0a8dc3f23265f2a11972af1697",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /shared-schedule 1`] = `
{
  "lines": 311,
  "modals": 4,
  "sha256": "5480aa53a8e54796850e15900175c17529302fa271c6a946090b2dedb27d2b9d",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /work-order 1`] = `
{
  "lines": 332,
  "modals": 4,
  "sha256": "88f358a0ed1792b1e8c82a06df1cc1b1c4b9d6bcccc89d8b690f9f33ef430fa5",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-profile-setup — dark 1`] = `
{
  "lines": 118,
  "modals": 1,
  "sha256": "ab211b22bb13634e6f1500aab595e8b8d2e85710c378196380db78abc9968e0f",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-profile-setup — light 1`] = `
{
  "lines": 118,
  "modals": 1,
  "sha256": "a161585e296b1b08067989d586fe5459ee7cf87e033ee2938c399e8537695b07",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-project-report — dark 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "67713cb3fc7d2ae264665c70e05ba99a3ab01261ae30084b758be316642eb989",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-project-report — light 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "8fc58ffc0b6b9e5a6dfbee6175749e0919fe4cf82cc7be8ba42e10e740a47211",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-quick-estimate — dark 1`] = `
{
  "lines": 204,
  "modals": 2,
  "sha256": "28374ee8cbcc07de51372dd18d9a5829813a7a7fb8822e9816b725e98206dfe0",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-quick-estimate — light 1`] = `
{
  "lines": 204,
  "modals": 2,
  "sha256": "22bade06ecfec67137da89208ce6969fc2a1029c6c1d6c15a326115003494e60",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-weekly-summary — dark 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "f1baf136683026d9eb577c36d780bf2c999019bf48c852d46d01537f8a1c8505",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-weekly-summary — light 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "d1229629540347d9f2e5734af0e2ec5f3ecf0f6c6d1f4b34e080ed7cbf4a63dd",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) cash-flow-setup — dark 1`] = `
{
  "lines": 41,
  "modals": 1,
  "sha256": "2faa5609eb96305fc34c5c9ab6f330b059f6f497efcba7e576a181814bcc9f1f",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) cash-flow-setup — light 1`] = `
{
  "lines": 41,
  "modals": 1,
  "sha256": "bac47f3e562d84e5091c3b9db3a889a3b202d741bf1a1931fb864fba08b54d3e",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-rfp-post — dark 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "17c5ded84d1cc1449ab650bbdb1f32df85afbd3e523fdfe8dc34afe74d6641ff",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-rfp-post — light 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "d4ddac6fc689568590365d2f44524fbe52c121ce69a3dafe52dfc749695e3479",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-subscription — dark 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "6b1502613b8fd0c01d2ed519411ef694c6c9c4b2b3df02f6f3c2f42857f4258d",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-subscription — light 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "b670d157d47d3ae4b4dfa4dc9064818df345357af3affae8c097038034a46ba1",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) estimate-comparison — dark 1`] = `
{
  "lines": 36,
  "modals": 1,
  "sha256": "97e7d10cf0d5e6345202ffb908daaeabfa7383ecf47c6a7c26f1b0fd65e32b64",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) estimate-comparison — light 1`] = `
{
  "lines": 36,
  "modals": 1,
  "sha256": "4ce34f646a32baf8773b7ebb9edba6779dad268b5b5753e831eae84d8bbf7484",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) material-ai-estimate — dark 1`] = `
{
  "lines": 60,
  "modals": 1,
  "sha256": "44de245fcc36f05885798ea9f0ee04159340242aa55fd173ee202feab2834cf0",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) material-ai-estimate — light 1`] = `
{
  "lines": 60,
  "modals": 1,
  "sha256": "bdc737ce17c4cd13690ac7766819c27e1317a7be978d82b941767fcb33837127",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) productivity-calculator — dark 1`] = `
{
  "lines": 623,
  "modals": 1,
  "sha256": "c30c034e5c0182ebfa4f34f39575a92057e7b6f5cd5875377930aa4a0ea2b819",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) productivity-calculator — light 1`] = `
{
  "lines": 623,
  "modals": 1,
  "sha256": "6760bb899f3d62965f40d95d64ff60183c67da03d6ddf6099b6d83c0dac5e00e",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) rfi-triage — dark 1`] = `
{
  "lines": 29,
  "modals": 1,
  "sha256": "dcf9cab43912dbe09381013d0e7920f63249a81a4ac073ebb2c79caf457ddd98",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) rfi-triage — light 1`] = `
{
  "lines": 29,
  "modals": 1,
  "sha256": "e53518427069599a3c90dba40599e90ccc640f75cb099f6bb1e426423609fddf",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) square-foot-estimator — dark 1`] = `
{
  "lines": 494,
  "modals": 1,
  "sha256": "b2c7dbbc195aa5d193b79f8bdc71dec53f4837c2fd5c236022fe46d3393e5657",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) square-foot-estimator — light 1`] = `
{
  "lines": 494,
  "modals": 1,
  "sha256": "dd789a6e429f5e0f7497601495f781fccff594dfdcb93f8f221c1ef1bf665af9",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) takeoff-page-inspector — dark 1`] = `
{
  "lines": 120,
  "modals": 1,
  "sha256": "8d216a58cb3d25aa0651093fdc6fc861130ba2d9c9bbaeacdb1ae79b675a1406",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) takeoff-page-inspector — light 1`] = `
{
  "lines": 120,
  "modals": 1,
  "sha256": "74c29b5be0315ae23c4a92f8e8388cd964a283e13d1aa67377c08ad8a2f785af",
}
`;
